--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    Operating System :: Unix
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
