Set minimum python_requires in setup.cfg to 3.6.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
 keywords = shelmet
 license = MIT License
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: Unix
@@ -26,6 +26,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
+python_requires = >=3.6
 install_requires =
 
 [options.packages.find]
