--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
+    typing-extensions>=3.7.4
 
 [options.packages.find]
 where = src
