Update README and project metadata.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = 0.4.0
 author = Derrick Gilland
 author_email = dgilland@gmail.com
 url = https://github.com/dgilland/shelmet
-description = A collection of shell utilities
+description = A shell power-up for working with the file system and running subprocess commands.
 long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
-keywords = shelmet
+keywords = shelmet shell subprocess process file system path os utility
 license = MIT License
 classifiers =
     Development Status :: 4 - Beta
