Move package __version__ setting from setup.cfg to inside package to get rid of dependency on pkg_resources.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = shelmet
-version = 0.5.0
+version = attr: shelmet.__version__
 author = Derrick Gilland
 author_email = dgilland@gmail.com
 url = https://github.com/dgilland/shelmet
