--- a/setup.cfg
+++ b/setup.cfg
@@ -62,12 +62,12 @@ dev =
 
 
 [bdist_wheel]
-python-tag = py3
+python_tag = py3
 
 [flake8]
 exclude = .tox,venv,env
-max-line-length = 100
-max-complexity = 10
+max_line_length = 100
+max_complexity = 10
 # F401 - `module` imported but unused
 # F811 - redefinition of unused `name` from line `N`
 # E203 - whitespace before ':'
