--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,11 @@ classifiers =
     Operating System :: Unix
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
 
@@ -43,6 +44,7 @@ dev =
     flake8-black
     flake8-bugbear
     flake8-isort
+    importlib_metadata<5; python_version=="3.7"
     invoke
     isort
     mypy
