--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ dev =
     flake8-black
     flake8-bugbear
     flake8-isort
+    furo
     importlib_metadata<5; python_version=="3.7"
     invoke
     isort
@@ -55,9 +56,8 @@ dev =
     pytest-freezegun
     pytest-mypy
     pytest-pylint
-    Sphinx
+    sphinx
     sphinx-autodoc-typehints
-    sphinx-rtd-theme
     tox
     twine
     wheel
