--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = py37, py38, py39, py310, py311
+isolated_build = true
 
 [gh-actions]
 python =
@@ -13,6 +14,6 @@ python =
 passenv = *
 extras = dev
 commands =
-    {posargs:inv test}
+    {posargs:inv ci}
 setenv =
     TOX_ENV_SITE_PACKAGES_DIR = {envsitepackagesdir}
